hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tvarray.php.like_types.exp
File "tvarray.php", line 5, characters 25-30:
Invalid return type (Typing[4110])
File "tvarray.php", line 5, characters 37-42:
Expected varray<~_>
File "tvarray.php", line 5, characters 25-30:
But got dynamic because it is an unenforceable type
File "tvarray.php", line 9, characters 22-32:
Invalid return type (Typing[4110])
File "tvarray.php", line 9, characters 39-49:
Expected varray<~int>
File "tvarray.php", line 9, characters 22-32:
But got dynamic because it is an unenforceable type
